# veritas-vm

./: .gitignore  LICENSE  README.md  THREAT-MODEL.md  pyproject.toml
verifiable_inference/: README.md  SPEC.md  __init__.py  benchmarks.py  canonical.py  certificate.py  cli.py  client.py  demo.py  disclosure.py  fast_kernels.py  full_demo.py  kernels.py  loader.py  merkle.py  model.py  prover.py  registry.py  server.py  session.py  signatures.py  trace.py  verifier.py
verifiable_inference/tests/: test_adversarial.py  test_canonical.py  test_disclosure.py  test_end_to_end.py  test_fast_kernels.py  test_kernels.py  test_loader.py  test_merkle.py  test_registry.py  test_server.py  test_session.py  test_signatures.py  test_trace.py
